# xdart

./: .gitignore  LICENSE  README.md  pyinstaller_command.txt  pyinstaller_command_mac.bat  pyinstaller_command_mac.txt  pyproject.toml  requirements.txt  setup.py  x-dart  xdart_cl.py  xdart_css.css  xdart_env.yml  xdart_env_pygix.yml  xdart_main.py  xdart_manual.docx  xdart_py10.yml
recipe/: meta.yaml
tests/: config.py  ewald_profile.txt  test_ewald.py  test_hvector.py  test_image_widget.py  test_nzarrays.py  test_smarray.py  test_smdict.py  test_smintdata.py  test_smvector.py  test_spec_utils.py
xdart/: __init__.py  main.py  utils.py  xdart.py  xdart_main.py
xdart/calibration/: calibrate.py  lmfit_models.py  run_calibration.ipynb
xdart/classes/: operation.py
xdart/containers/: __init__.py  arches.py  containers.py  int_data.py  nzarrays.py  poni.py
xdart/gui/: Ui_static.py  gui_utils.py  mainWindow.py  mainWindow.ui  rangeWidgetUI.py  rangeWidgetUI.ui  range_widget.py  static.ui
xdart/modules/: __init__.py
xdart/pySSRL-bServer/: BL 7-2 multi battery 5.21.2018.ipynb  Create YAML file for Beamline Configuration.ipynb  Create YAML file for Beamline Configuration_bl2-1.ipynb  README.md  bServer_funcs.py  executor.py  helper_funcs.py  runSPEC_bServer.ipynb  run_calibration_0.py  watcher.py  watchfolder3.py
xdart/pySSRL_bServer/: BL 7-2 multi battery 5.22.2018.ipynb  Create YAML file for Beamline Configuration_bl2-1.ipynb  LICENSE  More tests of bServer with SPEC infoserver.ipynb  bServer_funcs.py  helper_funcs.py  main.py  runSPEC_bServer.ipynb  watcher.py  (+5 more)
(+228 files in other folders)
